objects/Metrics__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>Metric_Template__r.Global_Dealer_Program__r.Account_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Metrics</relationshipLabel>
        <relationshipName>Metrics1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Birlasoft_partner_Portal__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Birlasoft. Amit Saha date :Feb 29.
We have created this field to use it on the partner portal page to display check box for Stay in same tier and promotion to next tier  and then on the VF page use -
&lt;apex:column &gt;
 &lt;apex:inputCheckbox value=&quot;{!o.isprivate} title=&quot;Help_Text from template &quot;/&gt;
&lt;/apex:column&gt;</description>
        <label>Birlasoft_partner_Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bonus_Display__c</fullName>
        <formula>Metric_Template__r.Bonus_Display__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Value_Overridden__c</fullName>
        <label>Bonus Value Overridden</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Value__c</fullName>
        <formula>Metric_Template__r.Bonus_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bonus__c</fullName>
        <formula>Metric_Template__r.Bonus_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculated_Bonus_Final__c</fullName>
        <formula>Calculated_Bonus__c + Metric_Template__r.Calculated_Bonus_Post_Concat__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Bonus Final</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Bonus__c</fullName>
        <label>Calculated Bonus</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Domain__c</fullName>
        <formula>Metric_Template__r.Global_Dealer_Program__r.Country_Domain__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Performance_Period_End_Date__c</fullName>
        <formula>Metric_Template__r.Global_Dealer_Program__r.Current_Performance_Period_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Performance Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Performance_Period_Start_Date__c</fullName>
        <formula>Metric_Template__r.Global_Dealer_Program__r.Current_Performance_Period_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Performance Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Updated_from_Qlikview__c</fullName>
        <label>Date Updated from Qlikview</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display_Flag__c</fullName>
        <formula>IF(Metric_Template__r.Display_Flag__c ,&apos;Y&apos;,&apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Record__c</fullName>
        <label>Display Record</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Quarter_of_Performance_Period__c</fullName>
        <formula>Metric_Template__r.Global_Dealer_Program__r.First_Quarter_of_Performance_Period__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Quarter of Performance Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_For_Bonus_Help_Text_Dutch__c</fullName>
        <formula>Metric_Template__r.Goal_For_Bonus_Help_Text_Dutch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal For Bonus Help Text Dutch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_For_Bonus_Help_Text_English__c</fullName>
        <formula>Metric_Template__r.Goal_For_Bonus_Help_Text_English__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal For Bonus Help Text English</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_For_Bonus_Help_Text_French__c</fullName>
        <formula>Metric_Template__r.Goal_For_Bonus_Help_Text_French__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal For Bonus Help Text French</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_For_Bonus_Help_Text_German__c</fullName>
        <formula>Metric_Template__r.Goal_For_Bonus_Help_Text_German__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal For Bonus Help Text German</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_For_Bonus_Help_Text_Italian__c</fullName>
        <formula>Metric_Template__r.Goal_For_Bonus_Help_Text_Italian__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal For Bonus Help Text Italian</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_For_Bonus_Help_Text_Spanish__c</fullName>
        <formula>Metric_Template__r.Goal_For_Bonus_Help_Text_Spanish__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal For Bonus Help Text Spanish</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Goal Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Goal_for_Bonus_Display_Final__c</fullName>
        <formula>IF( AND(Goal_Override__c , NOT( ISBLANK(Goal_for_Bonus_Display_Overridden__c ) ) )  ,Goal_for_Bonus_Display_Overridden__c,Goal_for_Bonus_Display__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal for Bonus Display Final</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Bonus_Display_Overridden__c</fullName>
        <label>Goal for Bonus Display Overridden</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Bonus_Display__c</fullName>
        <formula>Metric_Template__r.Goal_for_Bonus_Display__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal for Bonus Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Bonus_Value_Overridden__c</fullName>
        <label>Goal for Bonus Value Overridden</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Bonus_Value__c</fullName>
        <formula>Metric_Template__r.Goal_for_Bonus_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal for Bonus Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_for_Bonus__c</fullName>
        <formula>IF(  AND(Goal_Override__c , NOT( ISBLANK(   Goal_for_Bonus_Value_Overridden__c ) ) )  ,Goal_for_Bonus_Value_Overridden__c ,TEXT(Goal_for_Bonus_Value__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal for Bonus Value Final</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Promotion_Display_Final__c</fullName>
        <formula>IF(  AND(Goal_Override__c , NOT( ISBLANK(Goal_for_Promotion_Display_Overridden__c ) ) )  ,Goal_for_Promotion_Display_Overridden__c ,Metric_Template__r.Goal_for_Promotion_Display__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal for Promotion Display Final</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Promotion_Display_Overridden__c</fullName>
        <label>Goal for Promotion Display Overridden</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Promotion_Display__c</fullName>
        <formula>Metric_Template__r.Goal_for_Promotion_Display__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal for Promotion Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Promotion_Help_Text_Dutch__c</fullName>
        <formula>Metric_Template__r.Goal_for_Promotion_Help_Text_dutch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal for Promotion Help Text Dutch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Promotion_Help_Text_English__c</fullName>
        <formula>Metric_Template__r.Goal_for_Promotion_Help_Text_English__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal for Promotion Help Text English</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Promotion_Help_Text_French__c</fullName>
        <formula>Metric_Template__r.Goal_for_Promotion_Help_Text_French__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal for Promotion Help Text French</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Promotion_Help_Text_German__c</fullName>
        <formula>Metric_Template__r.Goal_for_Promotion_Help_Text_German__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal for Promotion Help Text German</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Promotion_Help_Text_Italian__c</fullName>
        <formula>Metric_Template__r.Goal_for_Promotion_Help_Text_Italian__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal for Promotion Help Text Italian</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Promotion_Help_Text_Spanish__c</fullName>
        <formula>Metric_Template__r.Goal_for_Promotion_Help_Text_Spanish__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal for Promotion Help Text Spanish</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Promotion_Overridden__c</fullName>
        <label>Goal for Promotion Value Overridden</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Promotion_Value__c</fullName>
        <formula>Metric_Template__r.Goal_for_Promotion_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal for Promotion Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_for_Promotion__c</fullName>
        <formula>IF(  AND(Goal_Override__c, NOT( ISBLANK( Goal_for_Promotion_Overridden__c ) ) )  ,VALUE(Goal_for_Promotion_Overridden__c),Metric_Template__r.Goal_for_Promotion_Value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal for Promotion Value Final</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_for_Retention_Display_Final__c</fullName>
        <formula>IF( AND(Goal_Override__c , NOT( ISBLANK(Goal_for_Retention_Display_Overidden__c ) ) ) ,Goal_for_Retention_Display_Overidden__c,Metric_Template__r.Goal_for_Retention_Display__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal for Retention Display Final</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Retention_Display_Overidden__c</fullName>
        <label>Goal for Retention Display Overidden</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Retention_Display__c</fullName>
        <formula>Metric_Template__r.Goal_for_Retention_Display__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal for Retention Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Retention_Help_Text_Dutch__c</fullName>
        <formula>Metric_Template__r.Goal_for_Retention_Help_Text_Dutch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal for Retention Help Text Dutch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Retention_Help_Text_English__c</fullName>
        <formula>Metric_Template__r.Goal_for_Retention_Help_Text_English__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal for Retention Help Text English</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Retention_Help_Text_French__c</fullName>
        <formula>Metric_Template__r.Goal_for_Retention_Help_Text_French__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal for Retention Help Text French</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Retention_Help_Text_German__c</fullName>
        <formula>Metric_Template__r.Goal_for_Retention_Help_Text_German__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal for Retention Help Text German</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Retention_Help_Text_Italian__c</fullName>
        <formula>Metric_Template__r.Goal_for_Retention_Help_Text_Italian__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal for Retention Help Text Italian</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Retention_Help_Text_Spanish__c</fullName>
        <formula>Metric_Template__r.Goal_for_Retention_Help_Text_Spanish__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal for Retention Help Text Spanish</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Retention_Overridden__c</fullName>
        <label>Goal for Retention Value Overridden</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_for_Retention_Value__c</fullName>
        <formula>Metric_Template__r.Goal_for_Retention_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal for Retention Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_for_Retention__c</fullName>
        <formula>IF(  AND(Goal_Override__c , NOT( ISBLANK( Goal_for_Retention_Overridden__c) ) ) ,VALUE(Goal_for_Retention_Overridden__c),Metric_Template__r.Goal_for_Retention_Value__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Goal for Retention Value Final</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric_Category_Dutch__c</fullName>
        <formula>Metric_Template__r.Metric_Category_Dutch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric Category Dutch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Category_French__c</fullName>
        <formula>Metric_Template__r.Metric_Category_French__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric Category French</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Category_German__c</fullName>
        <formula>Metric_Template__r.Metric_Category_German__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric Category German</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Category_Italian__c</fullName>
        <formula>Metric_Template__r.Metric_Category_Italian__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric Category Italian</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Category_Spanish__c</fullName>
        <formula>Metric_Template__r.Metric_Category_Spanish__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric Category Spanish</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Category__c</fullName>
        <formula>TEXT(Metric_Template__r.Metric_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Code__c</fullName>
        <formula>Metric_Template__r.Metric_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Name_Dutch__c</fullName>
        <formula>Metric_Template__r.Metric_Name_Dutch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric Name Dutch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Name_French__c</fullName>
        <formula>Metric_Template__r.Metric_Name_French__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric Name French</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Name_German__c</fullName>
        <formula>Metric_Template__r.Metric_Name_German__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric Name German</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Name_Italian__c</fullName>
        <formula>Metric_Template__r.Metric_Name_Italian__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric Name Italian</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Name_Spanish__c</fullName>
        <formula>Metric_Template__r.Metric_Name_Spanish__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric Name Spanish</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Name__c</fullName>
        <formula>TEXT(Metric_Template__r.Metric_Name__c)</formula>
        <label>Metric Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Order__c</fullName>
        <formula>Metric_Template__r.Metric_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric_Parent_Code__c</fullName>
        <formula>Metric_Template__r.Metric_Parent_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric Parent Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Result_Type__c</fullName>
        <formula>TEXT( Metric_Template__r.Metric_Result_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric Result Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Template__c</fullName>
        <label>Metric Template</label>
        <referenceTo>Metric_Template__c</referenceTo>
        <relationshipLabel>Metrics</relationshipLabel>
        <relationshipName>Metrics</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Metric_parentChild__c</fullName>
        <formula>Metric_Template__r.Metric_parentChild__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metric parentChild</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Metrics__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Metrics</label>
        <referenceTo>Metrics__c</referenceTo>
        <relationshipLabel>Metrics</relationshipLabel>
        <relationshipName>Child_Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Performance_Period__c</fullName>
        <formula>TEXT (Metric_Template__r.Global_Dealer_Program__r.Performance_Period__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Performance Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Year__c</fullName>
        <formula>Metric_Template__r.Global_Dealer_Program__r.Performance_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Performance Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Performance_Period_End_Date__c</fullName>
        <formula>Metric_Template__r.Global_Dealer_Program__r.Previous_Performance_Period_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous Performance Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Performance_Period_Start_Date__c</fullName>
        <formula>Metric_Template__r.Global_Dealer_Program__r.Previous_Performance_Period_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous Performance Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Result_Concat__c</fullName>
        <formula>IF(NOT(ISBLANK(Result__c)),  Metric_Template__r.Result_Pre_Concat__c + Result_Final__c + Metric_Template__r.Result_Post_Concat__c ,null)</formula>
        <label>Result Concat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result_Final__c</fullName>
        <formula>IF(  AND(Result_Override__c ,NOT(ISBLANK(Result_Overidden__c))) , Result_Overidden__c   ,  Result__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Result Final</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result_Goal_Comparison__c</fullName>
        <formula>TEXT( Metric_Template__r.Result_Goal_Comparison__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Result Goal Comparison</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result_Overidden__c</fullName>
        <label>Result Overidden</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Result Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Quarter_of_Performance_Period__c</fullName>
        <formula>Metric_Template__r.Global_Dealer_Program__r.Second_Quarter_of_Performance_Period__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Second Quarter of Performance Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_for_Bonus_Final__c</fullName>
        <formula>IF(  AND(Result_Override__c ,NOT(ISBLANK(TEXT(Status_for_Bonus_Overidden__c))))  , TEXT(Status_for_Bonus_Overidden__c)   , TEXT(Status_for_Bonus__c   ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status for Bonus Final</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_for_Bonus_Overidden__c</fullName>
        <label>Status for Bonus Overidden</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_for_Bonus__c</fullName>
        <label>Status for Bonus</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_for_Promotion_Final__c</fullName>
        <formula>IF(  AND(Result_Override__c ,NOT(ISBLANK(TEXT(Status_for_Promotion_Overidden__c))))  , TEXT(Status_for_Promotion_Overidden__c ) ,   TEXT(Status_for_Promotion__c  ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status for Promotion Final</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_for_Promotion_Overidden__c</fullName>
        <label>Status for Promotion Overidden</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_for_Promotion__c</fullName>
        <label>Status for Promotion</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_for_Retention_Final__c</fullName>
        <formula>IF(  AND(Result_Override__c ,NOT(ISBLANK(TEXT(Status_for_Retention_Overidden__c)))) ,  TEXT(Status_for_Retention_Overidden__c)   ,  TEXT( Status_for_Retention__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status for Retention Final</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_for_Retention_Overidden__c</fullName>
        <label>Status for Retention Overidden</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_for_Retention__c</fullName>
        <label>Status for Retention</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submetric_Identifier__c</fullName>
        <formula>IF( Metric_Template__r.Submetric_Identifier__c , &apos;Y&apos;, &apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submetric Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>Metric_Template__r.Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Where_to_Display__c</fullName>
        <formula>TEXT( Metric_Template__r.Where_to_Display__c)</formula>
        <label>Where to Display</label>
        <type>Text</type>
    </fields>
    <label>Metrics</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Metric_Code__c</columns>
        <columns>Metric_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>M-{0000000000}</displayFormat>
        <label>Metrics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>